plugins {
    id 'java'
    id "org.sonarqube" version "3.5.0.2730"
}

/****************************************
 * Local Configuration
 ****************************************/
jclGroup = "$jclGroup"
jclVersion = "$jclVersion"

group = "$rootProject.jclGroup"
version = "$rootProject.jclVersion"

allprojects {
    apply plugin: 'java'
    apply plugin: 'groovy'
    apply plugin: 'jacoco'

    repositories {
        mavenCentral()
        mavenLocal()
    }

    sourceCompatibility = "17"
    targetCompatibility = "17"

    test {
        useJUnitPlatform()
    }

    dependencies {
        implementation 'org.slf4j:slf4j-api:1.7.26'

        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
        testImplementation 'org.apache.groovy:groovy'
        testImplementation 'org.spockframework:spock-core:2.3-groovy-4.0'
        testImplementation "ch.qos.logback:logback-classic:1.2.8"
    }

    jacoco {
        toolVersion = "0.8.8"
    }

    jacocoTestReport {
        reports {
            xml.required = true
            csv.required = false
        }
        dependsOn test
    }

    test {
        finalizedBy jacocoTestReport
    }

    sonarqube {
        properties {
            property "sonar.projectKey", "bitcoin-sv_bsv-components-library"
            property "sonar.organization", "bitcoin-sv"
            property "sonar.host.url", "https://sonarcloud.io"
        }
    }
}

